<resources>
    <string name="app_name">SimplePubNubTest</string>

    <string name="main_activity_publish">Publish</string>
    <string name="main_activity_subscribe">Subscribe</string>
    <string name="main_activity_history">History</string>
    <string name="main_activity_channels_list">Channels List</string>
    <string name="main_activity_users_list">Users List</string>
    <string name="main_activity_unsubscribe">Unsubscribe</string>
    <string name="main_activity_chanenls_group">Channels group</string>
    <string name="title_activity_channels_group">ChannelsGroupActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="channels_group_activity_subscribe">Subscribe</string>
    <string name="channels_group_activity_add">Add channel</string>
    <string name="channels_group_activity_list">Show channels list</string>
    <string name="channels_group_activity_remove">Remove a channel</string>
    <string name="channels_group_activity_unsubscribe">Unsubscribe</string>
    <string name="channels_group_activity_audit">Audit</string>
    <string name="channels_group_activity_grant">Grant</string>
</resources>
