<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jiahaoliuliu.simplepubnubtest.ChannelsGroupActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/audit_permission_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/channels_group_activity_audit"
            />

        <Button
            android:id="@+id/grant_permission_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/channels_group_activity_grant"
            />

    </LinearLayout>

    <Button
        android:id="@+id/subscribe_channels_group_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/channels_group_activity_subscribe"
        />

    <Button
        android:id="@+id/add_channel_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/channels_group_activity_add"
        />

    <Button
        android:id="@+id/listing_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/channels_group_activity_list"
        />

    <Button
        android:id="@+id/remove_channel_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/channels_group_activity_remove"
        />

    <Button
        android:id="@+id/unsubscribe_channels_group_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/channels_group_activity_unsubscribe"
        />

</LinearLayout>
