<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/subscribe_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/main_activity_subscribe"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/publish_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/main_activity_publish"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/unsubscribe_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/main_activity_unsubscribe"
        android:layout_weight="1"
        />

</LinearLayout>
